--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "ts-jest": "^29.4.1"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "telnet-client": "^2.2.5",
     "thrift": "^0.22.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
