--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/jest": "^29.5.14",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "jest-html-reporter": "^4.3.0",
+    "jest-junit": "^16.0.0",
     "ts-jest": "^29.4.1"
   },
   "dependencies": {
