--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
     "test": "jest -i"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.4",
-    "@babel/preset-env": "^7.27.2",
-    "@babel/preset-typescript": "^7.27.1",
-    "@jest/globals": "^30.0.0-beta.3",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@jest/globals": "^30.2.0",
     "@types/jest": "^29.5.14",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-html-reporter": "^4.3.0",
     "jest-junit": "^16.0.0",
-    "ts-jest": "^29.4.1"
+    "ts-jest": "^29.4.5"
   },
   "dependencies": {
-    "axios": "^1.12.2",
-    "telnet-client": "^2.2.5",
+    "axios": "^1.13.2",
+    "telnet-client": "^2.2.9",
     "thrift": "^0.22.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
